@@ -360,12 +360,14 @@
  *                         add ap_unixd_config.group_name
  * 20111014.0 (2.3.15-dev) Remove cookie_path_str and cookie_domain_str from
  *                         proxy_dir_conf
+ * 20111025.0 (2.3.15-dev) Add return value and maxlen to ap_varbuf_regsub(),
+ *                         add ap_pregsub_ex()
  */
 
 #define MODULE_MAGIC_COOKIE 0x41503234UL /* "AP24" */
 
 #ifndef MODULE_MAGIC_NUMBER_MAJOR
-#define MODULE_MAGIC_NUMBER_MAJOR 20111014
+#define MODULE_MAGIC_NUMBER_MAJOR 20111025
 #endif
 #define MODULE_MAGIC_NUMBER_MINOR 0                   /* 0...n */
 
